# zcore

./: .gitignore  API_REFERENCE.md  README.md  gen.py  main.py  pyproject.toml
src/: window.py
zcore/: API_REFERENCE.md  README.md  __init__.py  helpers.py  window.py  zen.py
zcore/src/: draw.py  helpers.py  obj.py  window.py
