[project]
name = "zcore"
version = "0.1.0"
description = "A minimal pygame-based framework"
authors = [
  { name = "cross", email = "cts.contact.br@gmail.com" }
]

readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "pygame==2.6.1"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/code-forge-reaper/zcore"

[tool.setuptools]
packages = ["zcore"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
